AntDesign: fix TextAlignment CSS classnames

--- a/Source/Blazorise.AntDesign/Styles/_utilities.scss
+++ b/Source/Blazorise.AntDesign/Styles/_utilities.scss
@@ -185,24 +185,6 @@
     }
 }
 
-.ant-text {
-    &-left {
-        text-align: left !important;
-    }
-
-    &-right {
-        text-align: right !important;
-    }
-
-    &-center {
-        text-align: center !important;
-    }
-
-    &-justify {
-        text-align: justify !important;
-    }
-}
-
 .ant-border {
     border: $border-width solid $border-color !important;
 }
